testdata/invalid/import/not_found.pact
// Import non-existent file
import "./missing.pact"

component Service {
	id: string
}
